--- a/contactos.html
+++ b/contactos.html
@@ -65,6 +65,7 @@ Valeria Ospina Aguilar <br>
 pamelavelasquezm@idem.edu.co  <br>
 
 valeriaospinaa@idem.edu.co  <br></center>
+<center><img src="pamm y yo.jpeg" width="500" height="530" alt=""><br><br><br></center>
 </div>
 
 
