--- a/sociales.html
+++ b/sociales.html
@@ -57,10 +57,16 @@
 
 <div class="texto">
     <div class="titulo">  SOCIALES</div> <br> <br>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda similique dolore cumque, at, ab unde possimus porro id blanditiis, officia itaque! Placeat aliquam autem dolore delectus dicta reiciendis quam accusamus!
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi iure fuga commodi. Odit velit delectus labore dolore. Sequi molestias amet velit tenetur possimus est fuga delectus neque quisquam, eaque voluptatum?
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima perspiciatis nihil commodi hic beatae laudantium recusandae aliquid porro tempora. Autem cum delectus nam amet laboriosam consequuntur reiciendis! Eligendi, est deleniti.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, aspernatur necessitatibus adipisci ut cum mollitia sed suscipit officia fugiat, animi, unde veniam beatae saepe! Nemo recusandae incidunt amet unde expedita.
+    <body>
+        <center><img src="mapa mental sociales.jpeg" width="1100" height="700"> <br> <br></center>
+
+        <center> IDENTIDAD NACIONAL COLOMBIANA. <br> <br>
+
+            Sin embargo, nuestra identidad nacional se ha visto manchada por la violencia, la desigualdad y exclusión, nuestro pasado esta caracterizado de grandes muestras de intolerancia, desplazamientos forzados, y luchas sociales que hasta día de hoy siguen profundamente marcadas en nuestra sociedad 
+            A mi parecer estamos dejando a un lado nuestra verdadera cultura para darle importancia a todos estos actos violentos, me vendiendo mercancía con alusión a los narcos no se hace nada más que dañar nuestra identidad hacia el mundo, lo que verdaderamente nos identifica nuestra cultura indígena, la biodiversidad del pais, la música, el arte esta perdiendo gran importancia para nosotros como colombianos lo cual es un gran problema 
+            Pero igualmente tenemos todavía una identidad en construcción,hay que contrarrestar el pasado con nuestro presente para así proyectar un futuro en el cual todos valoramos como se debe nuestro pais. <br> <br> <br> <br></center>
+        
+    </body>
 
 </div>
 
