--- a/tecnologia.html
+++ b/tecnologia.html
@@ -69,13 +69,13 @@ La corriente eléctrica es un movimiento de electrones, por lo tanto, cualquier 
 Los circuitos eléctricos son circuitos cerrados, aunque podemos abrir el circuito en algún momento para interrumpir el paso de la corriente mediante un interruptor, pulsador u otro elemento del circuito. <br><br>
 
  <Center>Componentes de un circuito eléctrico</Center> <br> <br>
-Las partes de un circuito eléctrico básico son: <br> <br>
+<center> Las partes de un circuito eléctrico básico son: <br> <br> </center>
 
 Generador: producen y mantienen la corriente eléctrica por el circuito. <br>
 Conductores: es por donde se mueve la corriente eléctrica de un elemento a otro del circuito. <br>
 Receptores: son los elementos que transforman la energía eléctrica que les llega en otro tipo de energía. <br>
 Elementos de mando o control (interruptor): permiten dirigir o cortar a voluntad el paso de la corriente eléctrica dentro del circuito. <br>
-Elementos de protección (Fusible): protegen los circuitos y a las personas cuando hay peligro o la corriente es muy elevada y puede haber riesgo de quemar los elementos del circuito. <br>
+Elementos de protección (Fusible): protegen los circuitos y a las personas cuando hay peligro o la corriente es muy elevada y puede haber riesgo de quemar los elementos del circuito. <br> <br> <br>                                                                       
 
     
   </body>
