--- a/sociales3.html
+++ b/sociales3.html
@@ -56,17 +56,11 @@
 <!--Menu desplegable--->
 
 <div class="texto">
-    <div class="titulo">  SOCIALES</div> <br> <br>
-    <body>
-        <center><img src="mapa mental sociales.jpeg" width="1100" height="700"> <br> <br></center>
+  <div class="titulo"> INICIO </div> <br> <br>  
+   <body>
+    
+   </body>
 
-        <center> IDENTIDAD NACIONAL COLOMBIANA. <br> <br>
-
-            Sin embargo, nuestra identidad nacional se ha visto manchada por la violencia, la desigualdad y exclusión, nuestro pasado esta caracterizado de grandes muestras de intolerancia, desplazamientos forzados, y luchas sociales que hasta día de hoy siguen profundamente marcadas en nuestra sociedad 
-            A mi parecer estamos dejando a un lado nuestra verdadera cultura para darle importancia a todos estos actos violentos, me vendiendo mercancía con alusión a los narcos no se hace nada más que dañar nuestra identidad hacia el mundo, lo que verdaderamente nos identifica nuestra cultura indígena, la biodiversidad del pais, la música, el arte esta perdiendo gran importancia para nosotros como colombianos lo cual es un gran problema 
-            Pero igualmente tenemos todavía una identidad en construcción,hay que contrarrestar el pasado con nuestro presente para así proyectar un futuro en el cual todos valoramos como se debe nuestro pais. <br> <br> <br> <br></center>
-        
-    </body>
 
 </div>
 
