--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -58,8 +58,7 @@
 <div class="texto">
   <div class="titulo"> TECNOLOGÍA E INFORMÁTICA </div> <br> <br>  
    <body>
-    
-   </body>
+    <iframe src="https://drive.google.com/file/d/1R2Af4xh85Z5KxpTfZV-MlEyVi5-oqTF_/preview" width="640" height="480" allow="autoplay"></iframe></body>
 
 
 </div>
