ACTUALIZACIÓN UNO - PERIODO 3

--- a/inglés3.html
+++ b/inglés3.html
@@ -56,9 +56,192 @@
 <!--Menu desplegable--->
 
 <div class="texto">
-  <div class="titulo"> TECNOLOGÍA E INFORMÁTICA </div> <br> <br>  
+  <div class="titulo"> INGLÉS </div> <br> <br>  
    <body>
     
+    I.E.D.E.M.		TALLER INTEGRADO DE INGLES		DOCENTE: RAUL CAÑAS <br><br>
+
+NOTA IMPORTANTE: SE EXTIENDE LA FECHA DE PRESENTACIÓN Y DE CIERRE DE LA PLATAFORMA PARA RECIBIR SU TRABAJO HASTA EL DIA 13 DE OCTUBRE.  SE ATENDERÁN LAS CONSULTAS RESPECTIVAS DURANTE LAS CLASES. <br><br>
+
+
+INSTRUCCIONES: RECUERDE QUE EL CONTENIDO DE ESTA ACTIVIDAD VA PARA LA PÁGINA WEB EN LA PESTAÑA DEL PERIODO 3. <br>
+EL TALLER SE RESUELVE COMO PARTE DEL TRABAJO INTEGRADO CON OTRAS ÁREAS. <br>
+SE DEBEN PRESENTAR EVIDENCIAS Y AVANCES DEL TRABAJO REALIZADO. <br> 
+DURANTE LAS CLASES SE DISPONE DEL TIEMPO NECESARIO PARA TRABAJAR EN ESTA ACTIVIDAD. <br>
+TENER EN CUENTA LA FECHA FINAL DE CIERRE PARA LA ENTREGA DEL TRABAJO. <br>br 
+PARTE 1:  <br>
+TRANSCRIBE CADA UNO DE LOS TEXTOS QUE SE ENCUENTRAN A CONTINUACIÓN CONSERVANDO SU ORDEN. LUEGO AGREGA UNA IMAGEN QUE CORRESPONDA A CADA UNO DE ELLOS.
+ESCRIBE UNA FRASE EN PASADO SIMPLE Y UNA FRASE EN PRESENTE PERFECTO PARA CADA UNA DE LAS REGLAS QUE SE COMPARTEN EN EL DOCUMENTO. <br><br>  
+
+ATENCIÓN AL EJEMPLO: <br>
+I TREATED MY BROTHERS THE WAY THEY WANT TO BE TREATED. <br>
+I HAVE TREATED MY BROTHERS THE WAY THEY WANT TO BE TREATED <br><br>
+
+
+
+6 Simple principles to build peace in your community: <br>
+If you switch on the TV news, open the newspaper or click onto a popular news website, there’s always news about a terrorist attack, war, ongoing conflict and a general lack of peace amongst different groups of people. In an increasingly globalised world, we should understand each other better, stand ever more united and strive for peace. Sadly, the truth is quite the opposite. There’s conflict in Israel/Palestine, Kashmir, Iraq, Afghanistan, Syria, all over the world in fact…
+As individuals and citizens, how do we deal with this? How does this relate to us? How can we make positive changes to enable us to live in peace? <br>
+<center><img src="inner peace.jpeg" width="300" height="250" alt=""><br><br></center>
+
+RULE #1: TREAT OTHERS THE WAY YOU WISH TO BE TREATED <br>
+The good old Golden Rule says it all: empathy, tolerance and peace. This principle teaches you to love yourself and love others. It spans cultures and faiths and is a universal age old concept which can’t fail! <br><br>
+
+RULE #2: LISTEN TO HEAR WHAT OTHERS HAVE TO SAY, NOT TO SPEAK <br>
+Engage in dialogue with an open mind and the real will to listen to others. Only then will you be able to understand each other and build bridges. Change cannot happen and peace cannot be established if people are unable to communicate with others; to listen to their experiences and views and show empathy, understanding and compassion. <br><br>
+RULE #3: ACCEPT DIFFERENCE OF OPINION <br>
+We all have different opinions and we may not all agree on the same things. Building compromise and mutual understanding is incredibly important. Sometimes we simply need to agree to disagree and recognise that there are different beliefs and forms of expression other than our own. <br><br>
+RULE #4: DO NOT FIGHT VIOLENCE WITH VIOLENCE <br>
+Violence is never the answer. Peace can only be brought through free will, dialogue, empathy and forgiveness. Do not stoop to same level as someone who is violent and therefore continue the vicious cycle. This does not change anything. <br><br>
+
+
+
+RULE #5: ACCEPT THAT IDENTITY IS FLUID  <br>
+Any one person can have multiple aspects to their identity. Identity comprises many elements such as nationality, cultural-linguistic origin, age and religious beliefs. Identity can and does change, taking on many new forms and means of personal expression as we learn new languages, move home, adopt new beliefs, marry into a different tradition and experience life! Do not put people into a box. Avoid categorising people according to and us vs. them narrative and remember: we are all singular individuals with unique experiences. Such approaches and narratives are highly divisive and unproductive. <br><br>
+RULE #6: AVOID STEREOTYPES <br>
+Take people for the individuals they are. Avoid misconceptions, stereotypes and toxic narratives and get to know a person instead. This will avoid offense, misunderstandings and ultimately help you to create a real bond with others based on true understanding, empathy and trust. After all, no one likes to be judged – especially from the outside <br><br>
+
+
+
+PARTE 2: PREPARA CON TUS COMPAÑEROS DE EQUIPO UN VIDEO DONDE EXPLIQUES ALGUNO DE LOS TEMAS TRABAJADOS EN CLASE Y DE LOS CUALES SE DEJAN LAS OPCIONES QUE SE PROPONEN EN LA LISTA A CONTINUACIÓN: <br> <br>
+PASADO SIMPLE: FORMAS AFIRMATIVA, NEGATIVA E INTERROGATIVA. EXPLICAR E ILUSTRAR CON ALGUNOS EJEMPLOS SENCILLOS <br><br>
+VERBOS REGULARES E IRREGULARES EN SUS FORMAS DE PRESENTE, PASADO Y PARTICIPIO PASADO. <br> <br>
+PRESENTE PERFECTO EN FORMA AFIRMATIVA, NEGATIVA E INTERROGATIVA. EXPLICAR E ILUSTRAR CON ALGUNOS EJEMPLOS SENCILLOS <br> <br>
+EXPLICAR LA FUNCIÓN DE LOS SIGUIENTES VERBOS MODALES DANDO ALGUNOS EJEMPLOS SENCILLOS: CAN – COULD / MAY – MIGHT / SHOULD / <br><br>
+CONDICIONAL CERO: ESTA FORMA DE EXPRESARSE EN INGLÉS TIENE UNA CONDICIÓN ESPECIAL Y ES QUE SE UTILIZA LA EXPRESIÓN “IF” COMO CONECTOR DE DOS FRASES EN LAS QUE UNA ES UNA CONDICIÓN PARA QUE SE CUMPLA LA OTRA. LAS DOS FRASES DEBEN ESTAR EN PRESENTE SIMPLE: <br> <br>
+POR EJEMPLO: <br>
+ IF YOU COME EARLY I INVITE YOU TO THE MOVIES <br>
+  SI VIENES TEMPRANO TE INVITO A CINE <br>
+CLÁUSULA CON IF (PRESENTE SIMPLE) <br>
+RESULTADO (PRESENTE SIMPLE) <br> <br>
+
+
+
+
+
+
+PARTE 3: ESTUDIA CON UNO DE TUS COMPAÑEROS DE EQUIPO EL SIGUIENTE DIÁLOGO.  PRACTICALO Y REALIZA LA GRABACIÓN DEL AUDIO PARA AGREGARLO COMO PARTE DE LAS ACTIVIDADES QUE VAN PARA LA PÁGINA WEB <br><br>
+
+Jim: Hello, Karen, welcome back! How was your holiday? <br>
+Karen: It was great! <br>
+Jim: Where did you go? <br>
+Karen: I went to Rome.
+Jim: Oh, that’s interesting. How was the weather? <br>
+ Karen: It was nice. Warm and sunny. <br>
+Jim: Did you like the food? <br>
+Karen: Of course, it was wonderful. The pasta was amazing, and the pizza was incredible. <br>
+Jim: Did you go by yourself? <br>
+Karen: No, I didn’t. I went with my friend Jessica. She has some friends living there. <br>
+Jim: Did you see all the famous monuments? <br>
+Karen: Yes, I did. I saw the Coliseum, and the Fontana di Trevi, and all the rest. It’s such a beautiful city! <br>
+ Jim: Did you visit the Vatican City? <br>
+Karen: Yes, but it was very crowded. I walked around Saint Peter’s Square and looked at all the beautiful architecture. <br>
+Jim: Did you have a good time? <br>
+Karen: Yes, I did. I hope to go back some day. <br>
+Jim: How did you get there? <br>
+Karen: I got there by plane. The flight only takes a couple of hours. <br>
+Jim: Was it expensive? <br>
+Karen: The ticket wasn’t very expensive, but Italy is generally more expensive than Spain <br>
+Karen: And you, Jim? Did you go on holiday yet? <br>
+Jim: No, not yet. But I’m going to Turkey next week! <br>
+Karen: Very good Jim.  Ah it’s time to go home.  See you tomorrow.  <br>
+Jim: Ok Karen.  Have a nice rest of the day. See you then. <br><br>
+
+
+NOTA FINAL: REALIZA LA TRADUCCIÓN DEL DIÁLOGO. <br><br>
+
+
+
+<center>SOLUCIÓN</center>
+
+
+PARTE UNO <br><br>
+
+6 principios sencillos para construir la paz en tu comunidad <br>
+Si enciendes el telediario, abres el periódico o entras en un sitio web de noticias popular, siempre hay noticias sobre atentados terroristas, guerras, conflictos en curso y una falta general de paz entre distintos grupos de personas. En un mundo cada vez más globalizado, deberíamos entendernos mejor, estar cada vez más unidos y luchar por la paz. Lamentablemente, la verdad es todo lo contrario. Hay conflictos en Israel/Palestina, Cachemira, Irak, Afganistán, Siria, en todo el mundo, de hecho...
+Como individuos y ciudadanos, ¿cómo afrontamos esto? ¿Qué relación tiene con nosotros? ¿Cómo podemos hacer cambios positivos que nos permitan vivir en paz? <br>
+<center><img src="inner peace.jpeg" width="300" height="250" alt=""><br><br></center>
+
+REGLA Nº 1: TRATA A LOS DEMÁS COMO QUIERES QUE TE TRATEN A TI <br>
+La vieja Regla de Oro lo dice todo: empatía, tolerancia y paz. Este principio te enseña a amarte a ti mismo y a amar a los demás. Abarca culturas y religiones y es un concepto universal milenario que no puede fallar. <br>
+<center><img src="regla 1.jpeg" width="300" height="250" alt=""><br><br></center>
+
+- I have never treated the others in a bad way 'cause I know it can make them feel bad. <br>
+- I understood that treat the other people bad can create insecurities in them. <br><br>
+
+
+REGLA #3: ACEPTAR LA DIFERENCIA DE OPINIÓN <br>
+Todos tenemos opiniones diferentes y puede que no todos estemos de acuerdo en las mismas cosas. Lograr compromisos y comprensión mutua es increíblemente importante. A veces simplemente necesitamos estar de acuerdo en no estar de acuerdo y reconocer que existen creencias y formas de expresión diferentes a las nuestras. <br>
+<center><img src="regla 3.jpeg" width="300" height="250" alt=""><br><br></center>
+
+
+
+- I understood that not everyone has the same opinion on the subject <br>
+- I have understood that not all of us have the same  the same opinion on the subject <br><br>
+
+
+REGLA #4: NO COMBATIR LA VIOLENCIA CON VIOLENCIA <br>
+La violencia nunca es la respuesta. La paz sólo puede lograrse mediante el libre albedrío, el diálogo, la empatía y el perdón. No te rebajes al mismo nivel que alguien que es violento y, por lo tanto, continúas el
+círculo vicioso. Esto no cambia nada <br>
+<center><img src="regla 4.jpeg" width="300" height="250" alt=""><br><br></center>
+
+
+-I prefer to solve problems through dialogue than resort to violence. <br>
+
+-I have preferred to solve problems through dialogue rather than resorting to violence <br><br>
+
+
+REGLA #5: ACEPTAR QUE LA IDENTIDAD ES FLUIDA <br>
+Cualquier persona puede tener múltiples aspectos de su identidad. La identidad comprende muchos elementos como la nacionalidad, el origen cultural-lingüístico, la edad y las creencias religiosas. La identidad puede cambiar y de hecho cambia, adoptando muchas formas y medios nuevos de expresión personal a medida que aprendemos nuevos idiomas, nos mudamos a casa, adoptamos nuevas creencias, nos casamos con una tradición diferente y experimentamos la vida. No pongas a la gente en una caja. Evite categorizar a las personas según la narrativa "nosotros versus ellos" y recuerde: todos somos individuos singulares con experiencias únicas. Estos enfoques y narraciones son muy divisivos e improductivos. <br>
+<center><img src="regla 5.jpeg" width="300" height="250" alt=""><br><br></center>
+
+
+
+-I respect the differences in thought, beliefs, nationality and identity of the people around me. <br>
+
+-I have respected the differences in thought, beliefs, nationality and identity of the people around me <br> <br>
+
+
+REGLA #6: EVITE LOS ESTEREOTIPOS <br>
+Tome a las personas por los individuos que son. Evite conceptos erróneos, estereotipos y narrativas tóxicas y, en su lugar, conozca a una persona. Esto evitará ofensas, malentendidos y, en última instancia, le ayudará a crear un vínculo real con los demás basado en la verdadera comprensión, empatía y confianza. Al fin y al cabo, a nadie le gusta que lo juzguen, especialmente desde fuera. <br>
+<center><img src="regla 6.jpeg" width="300" height="250" alt=""><br><br></center>
+
+
+-I do not judge people without knowing them, on the contrary I treat them with equality and respect. <br>
+
+-I have not judged people without knowing them, on the contrary I treat them with equality and respect. <br> <br><br>
+
+
+
+Jim: Hola, Karen, ¡bienvenida de nuevo! ¿Cómo estuvieron tus vacaciones? <br>
+karen: ¡fue genial! <br>
+Jim: ¿A dónde fuiste? <br>
+Karen: Fui a Roma. <br>
+Jim: Oh, eso es interesante. ¿Cómo estuvo el clima? <br>
+karen: fue agradable. Cálido y soleado. <br>
+Jim: ¿Te gustó la comida? <br>
+Karen: Por supuesto, fue maravilloso. La pasta estaba increíble y la pizza era increíble. <br>
+Jim: ¿Fuiste solo? <br>
+karen: no, no lo hice. Fui con mi amiga Jessica. Tiene algunos amigos que viven allí. <br>
+Jim: ¿Viste todos los monumentos famosos? <br>
+karen: sí, lo hice. Vi el Coliseo, la Fontana di Trevi y todo lo demás. ¡Es una ciudad tan hermosa! <br>
+ Jim: ¿Visitaste la Ciudad del Vaticano? <br>
+Karen: Sí, pero había mucha gente. Caminé por la Plaza de San Pedro y observé toda la hermosa arquitectura. <br>
+Jim: ¿La pasaste bien? <br>
+karen: sí, lo hice. Espero volver algún día. <br>
+Jim: ¿Cómo llegaste allí? <br>
+Karen: Llegué en avión. El vuelo sólo dura un par de horas. <br>
+Jim: ¿Fue caro? <br>
+Karen: El billete no era muy caro, pero Italia en general es más cara que España. <br>
+Karen: ¿Y tú, Jim? ¿Ya te fuiste de vacaciones? <br>
+Jim: No, todavía no. ¡Pero me voy a Turquía la semana que viene! <br>
+Karen: Muy bien Jim.  Ah, es hora de volver a casa.  Nos vemos mañana. <br>
+Jim: Ok Karen.  Que tengas un buen resto del día. Nos vemos entonces. <br> <br> <br>
+
+
+
+
+
    </body>
 
 
