--- a/sociales3.html
+++ b/sociales3.html
@@ -56,9 +56,22 @@
 <!--Menu desplegable--->
 
 <div class="texto">
-  <div class="titulo"> TECNOLOGÍA E INFORMÁTICA </div> <br> <br>  
+  <div class="titulo"> SOCIALES </div> <br> <br>  
    <body>
-    
+    En el siguiente mapa conceptual se presentará un breve resumen de lo que fue el movimiento y clase obrera y sus aportes: <br> <br>
+    <center><img src="mapa conceptual.png" alt="" width="1100" height="700"></center>
+
+En el siguiente vídeo encontraremos un poco de información sobre lo que fue la industrialización en Medellín en el siglo XX: <br><br>
+
+<center> <iframe src="video.mp4" width="500"  height="300"></iframe></center>
+
+En este podcast encontrarás una reflexión sobre el impacto que está teniendo el consumo irresponsable en el medio ambiente: <br><br>
+
+<center><iframe src="PODCAST.MP3" width="310" height="150" allow="autoplay"></iframe> </center><br><br>
+
+   
+
+
    </body>
 
 
