--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -58,7 +58,58 @@
 <div class="texto">
   <div class="titulo"> TECNOLOGÍA E INFORMÁTICA </div> <br> <br>  
    <body>
-    <iframe src="https://drive.google.com/file/d/1R2Af4xh85Z5KxpTfZV-MlEyVi5-oqTF_/preview" width="640" height="480" allow="autoplay"></iframe></body>
+  <br>  <iframe src="https://drive.google.com/file/d/1R2Af4xh85Z5KxpTfZV-MlEyVi5-oqTF_/preview" width="680" height="400" allow="autoplay"></iframe></body>
+<iframe src="LOST!.mp4" width="540"  height="380" allow="autoplay"></iframe> <br>
+<br>
+<br>
+
+Las funciones de Excel son fórmulas predefinidas que permiten realizar cálculos y manipular datos de manera eficiente en hojas de cálculo. Estas funciones pueden ayudar en diversas tareas, como sumar, promediar, buscar información, contar elementos, y realizar operaciones lógicas. <br>
+
+Tipos de funciones en Excel:  <br>
+1. Función Matemáticas y Trigonométricas:  <br> <br>
+
+SUMA: Suma un rango de celdas. <br>
+<img src="suma.webp" width="300" height="250" alt=""><br><br>
+PRODUCTO: Multiplica los valores de un rango <br> 
+<img src="producto.webp" width="300" height="250" alt=""><br><br>
+2. Funciones Estadísticas: <br><br>
+
+PROMEDIO: Calcula el promedio de un conjunto de números. <br>
+<img src="promedio.webp" width="300" height="250" alt=""><br><br>
+MEDIANA: Encuentra el valor central de un conjunto de datos. <br>
+<img src="mediana.webp" width="300" height="250" alt=""><br><br>
+3. Funciones de Búsqueda y Referencia: <br><br>
+
+VLOOKUP (BUSCARV): Busca un valor en la primera columna de una tabla y devuelve un valor en la misma fila desde otra columna. <br>
+<img src="vlookup.webp" width="300" height="250" alt=""><br><br>
+HLOOKUP (BUSCARH): Similar a VLOOKUP, pero busca en filas. <br> 
+<img src="hlookup.webp" width="300" height="250" alt=""><br><br>
+4. Funciones Lógicas: <br><br>
+
+SI: Permite realizar una comparación lógica y devuelve un valor si es verdadero y otro si es falso. <br>
+<img src="SI.webp" width="300" height="250" alt=""><br><br>
+Y / O: Evalúan múltiples condiciones lógicas. <br>
+<img src="Y ó O.webp" width="300" height="250" alt=""><br><br>
+Funciones de Texto: <br> <br>
+
+CONCATENAR: Une varios textos en una sola celda. <br>
+<img src="concatenar.webp" width="300" height="250" alt=""><br><br>
+
+Uso de las funciones: <br>
+Las funciones se utilizan ingresando su nombre seguido de paréntesis que contienen los argumentos necesarios. Por ejemplo: <br><br>
+
+=SUMA(A1:A10) <br><br>
+
+A continuación una explicación de cuatro de estas funciones con más detalles: <br><br>
+
+<center><iframe src="FUNCIONES EXCEL.mp3" width="310" height="150" allow="autoplay"></iframe> </center><br><br>
+
+<center> <iframe src="EXCEL.mp4" width="550"  height="350"></iframe></center>
+
+
+
+
+
 
 
 </div>
