--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!--Menu desplegable--->
 
 <div class="texto">
-  <div class="titulo"> TECNOLOGÍA E INFORMÁTICA </div> <br> <br>  
+  <div class="titulo"> INICIO </div> <br> <br>  
    <body>
     
    </body>
