--- a/contactos.html
+++ b/contactos.html
@@ -65,9 +65,10 @@ Valeria Ospina Aguilar <br>
 pamelavelasquezm@idem.edu.co  <br>
 
 valeriaospinaa@idem.edu.co  <br></center>
-<center><img src="pamm y yo.jpeg" width="500" height="530" alt=""><br><br><br></center>
-</div>
 
+</div>
+<br><center><img src="imgc.webp" width="500" height="530" alt=""><br><br><br></center>
+</div>
 
 </div>
 </body>
