--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 <div class="texto">
   <div class="titulo"> INICIO </div> <br> <br>  
    <body>
-    
+    <br><center><center><img src="imgs.webp" width="500" height="530" alt=""><br><br><br></center>
+</div></center>
    </body>
 
 
