--- a/inglés3.html
+++ b/inglés3.html
@@ -211,7 +211,13 @@ Tome a las personas por los individuos que son. Evite conceptos erróneos, ester
 
 -I have not judged people without knowing them, on the contrary I treat them with equality and respect. <br> <br><br>
 
+<body><div><iframe src="https://drive.google.com/file/d/1Z9uUj12C8meMHdgmEHe6GrKWdYZQpHJA/preview" width="640" height="480" allow="autoplay"></iframe></div>
+    
+</body>
 
+<body> <div><iframe src="https://drive.google.com/file/d/1ZPBWGEOFUbeg2h5gvPv1mIZx-iv_7Cxs/preview" width="640" height="480" allow="autoplay"></iframe></div>
+    
+</body>
 
 Jim: Hola, Karen, ¡bienvenida de nuevo! ¿Cómo estuvieron tus vacaciones? <br>
 karen: ¡fue genial! <br>
