--- a/sociales3.html
+++ b/sociales3.html
@@ -62,8 +62,10 @@
     <center><img src="mapa conceptual.png" alt="" width="1100" height="700"></center>
 
 En el siguiente vídeo encontraremos un poco de información sobre lo que fue la industrialización en Medellín en el siglo XX: <br><br>
+<body><div><iframe src="https://drive.google.com/file/d/1Z0ct3e5oTwoIvXTPUffC4_Xm1yClN-gk/preview" width="640" height="480" allow="autoplay"></iframe></div>
+    
+</body>
 
-<center> <iframe src="video.mp4" width="500"  height="300"></iframe></center>
 
 En este podcast encontrarás una reflexión sobre el impacto que está teniendo el consumo irresponsable en el medio ambiente: <br><br>
 
