--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -59,7 +59,7 @@
   <div class="titulo"> TECNOLOGÍA E INFORMÁTICA </div> <br> <br>  
    <body>
   <br>  <iframe src="https://drive.google.com/file/d/1R2Af4xh85Z5KxpTfZV-MlEyVi5-oqTF_/preview" width="680" height="400" allow="autoplay"></iframe></body>
-<iframe src="LOST!.mp4" width="540"  height="380" allow="autoplay"></iframe> <br>
+
 <br>
 <br>
 
@@ -101,10 +101,14 @@ Las funciones se utilizan ingresando su nombre seguido de paréntesis que contie
 =SUMA(A1:A10) <br><br>
 
 A continuación una explicación de cuatro de estas funciones con más detalles: <br><br>
+ <body>
+    <div><iframe src="https://drive.google.com/file/d/1YmW-UPnus982kNHZ7-k9yFv1ckMblkbQ/preview" width="640" height="480" allow="autoplay"></iframe></div>
+        
+    </body>
 
 <center><iframe src="FUNCIONES EXCEL.mp3" width="310" height="150" allow="autoplay"></iframe> </center><br><br>
 
-<center> <iframe src="EXCEL.mp4" width="550"  height="350"></iframe></center>
+
 
 
 
